Updated README with badge

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # mypackage
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/okemp99/mypackage/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/okemp99/mypackage/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 This is a test package for the R package development session on 28/07/2022.
